--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "declaration": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["./dist/**/*"]
 }
